first set of updates for talk

--- a/css/theme/source/black.scss
+++ b/css/theme/source/black.scss
@@ -16,19 +16,19 @@
 
 
 // Override theme settings (see ../template/settings.scss)
-$backgroundColor: #222;
+$backgroundColor: #1D252C;
 
 $mainColor: #fff;
 $headingColor: #fff;
 
 $mainFontSize: 38px;
-$mainFont: 'Source Sans Pro', Helvetica, sans-serif;
-$headingFont: 'Source Sans Pro', Helvetica, sans-serif;
+$mainFont: 'Avenir Next', Helvetica, sans-serif;
+$headingFont: 'Avenir Next', Helvetica, sans-serif;
 $headingTextShadow: none;
 $headingLetterSpacing: normal;
-$headingTextTransform: uppercase;
-$headingFontWeight: 600;
-$linkColor: #42affa;
+$headingTextTransform: none;
+$headingFontWeight: 400;
+$linkColor: #6CC5E9;
 $linkColorHover: lighten( $linkColor, 15% );
 $selectionBackgroundColor: lighten( $linkColor, 25% );
 
