--- a/css/theme/black.css
+++ b/css/theme/black.css
@@ -11,8 +11,8 @@ section.has-light-background, section.has-light-background h1, section.has-light
  * GLOBAL STYLES
  *********************************************/
 body {
-  background: #1D252C;
-  background-color: #1D252C; }
+  background: #313D47;
+  background-color: #313D47; }
 
 .reveal {
   font-family: "Avenir Next", Helvetica, sans-serif;
@@ -22,7 +22,7 @@ body {
 
 ::selection {
   color: #fff;
-  background: #dbf1fa;
+  background: #dcf1f9;
   text-shadow: none; }
 
 .reveal .slides > section,
@@ -198,20 +198,20 @@ body {
  * LINKS
  *********************************************/
 .reveal a {
-  color: #6CC5E9;
+  color: #6EC4E8;
   text-decoration: none;
   -webkit-transition: color 0.15s ease;
   -moz-transition: color 0.15s ease;
   transition: color 0.15s ease; }
 
 .reveal a:hover {
-  color: #afdff3;
+  color: #84cdeb;
   text-shadow: none;
   border: none; }
 
 .reveal .roll span:after {
   color: #fff;
-  background: #29abdf; }
+  background: #2ca9de; }
 
 /*********************************************
  * IMAGES
@@ -229,7 +229,7 @@ body {
 
 .reveal a:hover img {
   background: rgba(255, 255, 255, 0.2);
-  border-color: #6CC5E9;
+  border-color: #6EC4E8;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.55); }
 
 /*********************************************
@@ -237,31 +237,31 @@ body {
  *********************************************/
 .reveal .controls div.navigate-left,
 .reveal .controls div.navigate-left.enabled {
-  border-right-color: #6CC5E9; }
+  border-right-color: #6EC4E8; }
 
 .reveal .controls div.navigate-right,
 .reveal .controls div.navigate-right.enabled {
-  border-left-color: #6CC5E9; }
+  border-left-color: #6EC4E8; }
 
 .reveal .controls div.navigate-up,
 .reveal .controls div.navigate-up.enabled {
-  border-bottom-color: #6CC5E9; }
+  border-bottom-color: #6EC4E8; }
 
 .reveal .controls div.navigate-down,
 .reveal .controls div.navigate-down.enabled {
-  border-top-color: #6CC5E9; }
+  border-top-color: #6EC4E8; }
 
 .reveal .controls div.navigate-left.enabled:hover {
-  border-right-color: #afdff3; }
+  border-right-color: #84cdeb; }
 
 .reveal .controls div.navigate-right.enabled:hover {
-  border-left-color: #afdff3; }
+  border-left-color: #84cdeb; }
 
 .reveal .controls div.navigate-up.enabled:hover {
-  border-bottom-color: #afdff3; }
+  border-bottom-color: #84cdeb; }
 
 .reveal .controls div.navigate-down.enabled:hover {
-  border-top-color: #afdff3; }
+  border-top-color: #84cdeb; }
 
 /*********************************************
  * PROGRESS BAR
@@ -270,7 +270,7 @@ body {
   background: rgba(0, 0, 0, 0.2); }
 
 .reveal .progress span {
-  background: #6CC5E9;
+  background: #6EC4E8;
   -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
@@ -279,4 +279,4 @@ body {
  * SLIDE NUMBER
  *********************************************/
 .reveal .slide-number {
-  color: #6CC5E9; }
+  color: #6EC4E8; }
