--- a/css/theme/source/black.scss
+++ b/css/theme/source/black.scss
@@ -16,7 +16,7 @@
 
 
 // Override theme settings (see ../template/settings.scss)
-$backgroundColor: #1D252C;
+$backgroundColor: #313D47;
 
 $mainColor: #fff;
 $headingColor: #fff;
@@ -28,8 +28,8 @@ $headingTextShadow: none;
 $headingLetterSpacing: normal;
 $headingTextTransform: none;
 $headingFontWeight: 400;
-$linkColor: #6CC5E9;
-$linkColorHover: lighten( $linkColor, 15% );
+$linkColor: #6EC4E8;
+$linkColorHover: lighten( $linkColor, 5% );
 $selectionBackgroundColor: lighten( $linkColor, 25% );
 
 $heading1Size: 2.5em;
