--- a/css/theme/black.css
+++ b/css/theme/black.css
@@ -46,7 +46,7 @@ body {
   line-height: 1.2;
   letter-spacing: normal;
   text-transform: none;
-  text-shadow: none;
+  text-shadow: 2px 2px rgba(0, 0, 0, 0.3);
   word-wrap: break-word; }
 
 .reveal h1 {
@@ -62,7 +62,7 @@ body {
   font-size: 1em; }
 
 .reveal h1 {
-  text-shadow: none; }
+  text-shadow: 2px 2px rgba(0, 0, 0, 0.3); }
 
 /*********************************************
  * OTHER
@@ -219,7 +219,7 @@ body {
 .reveal section img {
   margin: 15px 0px;
   background: rgba(255, 255, 255, 0.12);
-  border: 4px solid #fff;
+  border: 0 solid #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); }
 
 .reveal a img {
